fix(buttons): change vertical-align from bottom to middle

--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -12,7 +12,7 @@
   );
 
   display: inline-block;
-  vertical-align: bottom;
+  vertical-align: middle;
   cursor: pointer;
   font-size: $pe-btn-font-size;
   height: $pe-btn-height;
